feat(restaurants): add cards and animations
added cards of restaurants and integreted api in Main page.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05-primeiro-projeto-react",
+  "name": "goomer-lista-rango",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
